# autoconstitution

./: .gitignore  AUTOCONSTITUTION_SUMMARY.md  README.md  TDD_INFRASTRUCTURE_AUDIT.md
architecture/: branch_management.md  communication_protocol.md  core_architecture.md  critic_design.md  deployment.md  distributed_systems.md  evaluation_framework.md  hardware_abstraction.md  observability.md  orchestrator_design.md  plugin_system.md  pollination_layer.md  security_model.md  state_management.md  testing_strategy.md
benchmark/: .dockerignore  .env.template  Dockerfile  Makefile  ablation_studies.md  analysis_methods.md  assets.yaml  baseline_reproduction.md  benchmark_design.md  comparison_methodology.md  docker-compose.yml  environment.yml  metrics_definition.md  performance_projection.md  reporting_format.md  reproduce.sh  reproducibility_protocol.md  requirements.txt  seeds.yaml  validation_procedures.md
benchmark/.github/workflows/: reproducibility.yml
benchmark/configs/: m4_baseline.yaml
benchmark/reproducibility/: __init__.py  api.py  check_reproducibility.py  environment.py  seeds.py  verify_deps.py
benchmark/scripts/: configure_linux.sh  configure_macos.sh
codebase/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  autoconstitution.yaml  constitution.md  prepare.py  program.md  pyproject.toml  train.py
codebase/.github/workflows/: ci.yml
codebase/autoconstitution/: README.md  __init__.py  branch_manager.py  checkpoint.py  cli.py  config.py  dashboard.py  example_usage.py  experiment.py  orchestrator.py  orchestrator_adapter.py  pollination.py  pyproject.toml  ratchet.py
codebase/autoconstitution/agents/: __init__.py  base.py  critic.py  experimenter.py  researcher.py  synthesiser.py
codebase/autoconstitution/benchmark/: __init__.py  bootstrap.py  events.py  protocol.py  report.py  runner.py  tdd_loop.py
codebase/autoconstitution/benchmark/datasets/: coding_bugs.jsonl  coding_hard.jsonl
codebase/autoconstitution/benchmark/scorers/: __init__.py  coding.py  judge.py
codebase/autoconstitution/cai/: __init__.py  critique_revision.py  hierarchy.py  preference_pairs.py  trl_trainer.py
codebase/autoconstitution/examples/: basic_usage.py  ollama_usage.py
codebase/autoconstitution/hardware/: __init__.py  detector.py  gpu.py  m4.py
codebase/autoconstitution/metrics/: __init__.py  base.py  example_usage.py  test_val_bpb.py  val_bpb.py
codebase/autoconstitution/providers/: __init__.py  anthropic.py  auto_detect.py  fake.py  kimi.py  kimi_readme.md  ollama.py  openai.py  probe.py
codebase/autoconstitution/substrate/: README.md  __init__.py  capability_self_map.py  cli.py  counterfactual.py  curriculum.py  loop.py  manifold.py  packet.py  proof_artifact.py  shadow_validator.py  skill_compiler.py  state_graph.py
codebase/autoconstitution/ui/: __init__.py  events.py  json_stream.py  live.py  plain.py  probe_view.py  protocol.py  scoreboard.py
codebase/examples/financial_analyst/: README.md  constitution.finance.md  prompts.txt
codebase/tests/: README.md  __init__.py  conftest.py  pytest.ini  smoke_live.py  test_bench_report.py  test_bench_runner.py  test_benchmark_scorers.py  test_cai_e2e.py  test_cli_asymmetric_providers.py  test_cli_exit_codes.py  test_critique_revision.py  test_fake_provider.py  test_orchestrator.py  test_plain_and_json_renderers.py  test_pollination.py  test_preference_pairs.py  test_probe.py  test_providers.py  test_public_api.py  test_ratchet.py  test_researcher_incomplete_patch.py  test_scoreboard.py  test_tdd_loop.py
codebase/tests/substrate/: __init__.py  conftest.py  test_capability_self_map.py  test_counterfactual.py  test_curriculum.py  test_manifold.py  test_packet.py  test_proof_artifact.py  test_shadow_validator.py  test_skill_compiler.py  test_state_graph.py  test_substrate_loop.py
docs/audits/: 2026-04-18-cai-loop-review.md  2026-04-19-cai-research-audit.md
docs/plans/: 2026-04-16-autoconstitution-open-source-redesign-design.md  2026-04-16-autoconstitution-open-source-redesign.md  2026-04-17-wiring-and-ux-design.md  2026-04-18-benchmark-runner-design.md
experiments/: check_disjointness.py  code_review_constitution.md  eval_minimax_ceiling.py  eval_three_way.py  generate_pairs.py  generate_pairs_bestofn.py  generate_pairs_teacher.py  humaneval_scorer.py  ingest_humanevalplus.py  ingest_mbpp.py  run_experiment.sh  train_sft_mlx.py
launch/: blog_post.md  community_strategy.md  demo_design.md  landing_page.md  newsletter.md  positioning_statement.md  roadmap.md  show_hn.md  tweet_thread.md  video_script.md
research/: api_economics.md  automl_nas.md  benchmark_design.md  competitive_landscape.md  constitutional_ai.md  cross_pollination.md  distributed_training.md  git_collaboration.md  github_virality.md  llm_agents.md  moe_architectures.md  open_source_strategy.md  parl_architecture.md  prior_work.md  prompt_optimization.md  ratchet_mechanism.md  safety_alignment.md  scaling_architecture.md  state_space_models.md  training_efficiency.md
scripts/: make_readme_charts.py
