[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoconstitution"
version = "0.2.0"
description = "Constitutional AI hierarchy for recursive self-improvement — Karpathy's autoresearch + Anthropic's CAI, made multi-agent."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "autoconstitution contributors"},
]
keywords = [
    "constitutional-ai",
    "cai",
    "rlaif",
    "autoresearch",
    "llm",
    "alignment",
    "self-improvement",
    "multi-agent",
    "dpo",
    "fine-tuning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# ---- Provider backends (pick whichever you have keys / local runtime for) ----
kimi = [
    "openai>=1.0.0",  # Kimi uses OpenAI-compatible API
]
anthropic = [
    "anthropic>=0.39.0",
]
openai = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]
ollama = [
    # Ollama is HTTP-only; httpx already in base deps
]
# All providers bundled
providers = [
    "openai>=1.0.0",
    "anthropic>=0.39.0",
    "tiktoken>=0.5.0",
]

# ---- Fine-tuning stack (DPO / GRPO / SFT via TRL) ----
train = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "trl>=0.9.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "datasets>=2.18.0",
    "bitsandbytes>=0.43.0 ; platform_system != 'Darwin'",
]

# ---- Hardware acceleration ----
cuda = [
    "torch>=2.1.0",
    "nvidia-ml-py>=12.535.0",
]
mps = [
    "torch>=2.1.0",
    "coremltools>=8.0 ; platform_system == 'Darwin'",
]

# ---- Dev / CI ----
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

# ---- Everything (for `pip install "autoconstitution[all]"`) ----
all = [
    "autoconstitution[providers,train,dev]",
]

[project.scripts]
autoconstitution = "autoconstitution.cli:main"
# Alias for discoverability — `autoconst run` is faster to type
autoconst = "autoconstitution.cli:main"

[project.urls]
Homepage = "https://github.com/autoconstitution/autoconstitution"
Documentation = "https://autoconstitution.readthedocs.io"
Repository = "https://github.com/autoconstitution/autoconstitution"
Issues = "https://github.com/autoconstitution/autoconstitution/issues"

[tool.hatch.build.targets.wheel]
packages = ["autoconstitution"]

[tool.hatch.build.targets.wheel.force-include]
"autoconstitution/py.typed" = "autoconstitution/py.typed"
"constitution.md" = "autoconstitution/constitution.md"
"autoconstitution/benchmark/datasets/coding_bugs.jsonl" = "autoconstitution/benchmark/datasets/coding_bugs.jsonl"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Slice-based strict enforcement. Modules fully typed and strict-clean:
#   autoconstitution.ratchet, autoconstitution.ui (when landed),
#   autoconstitution.providers.fake (when landed), autoconstitution.cai (slice 2).
# Legacy modules are excluded from strict; strict is enforced via ratchet on the
# modules we've explicitly touched. New code in strict-clean modules must not
# regress.
[[tool.mypy.overrides]]
module = [
    "autoconstitution.agents.*",
    "autoconstitution.orchestrator",
    "autoconstitution.orchestrator_adapter",
    "autoconstitution.pollination",
    "autoconstitution.branch_manager",
    "autoconstitution.checkpoint",
    "autoconstitution.dashboard",
    "autoconstitution.experiment",
    "autoconstitution.example_usage",
    "autoconstitution.providers.ollama",
    "autoconstitution.providers.auto_detect",
    "autoconstitution.providers.anthropic",
    "autoconstitution.providers.kimi",
    "autoconstitution.providers.openai",
    "autoconstitution.cli",
    "autoconstitution.config",
    "autoconstitution.hardware.*",
    "autoconstitution.metrics.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["ollama", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=autoconstitution --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["autoconstitution"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "autoconstitution/example_usage.py",
    "autoconstitution/cai/example_usage.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
